Update: Add seperate images folder

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="mainContainer">
       <header class="header">
         <nav class="navbar flex justifyBetween alignCenter">
-          <a href="#"><img src="logo.png" alt="" /></a>
+          <a href="#"><img src="images/logo.png" alt="" /></a>
           <button class="btn uppercaseText boldFont headerBtn">
             Pre-order now
           </button>
@@ -44,23 +44,23 @@
           <picture>
             <source
               media="(min-width:800px)"
-              srcset="headerPic.png"
+              srcset="images/headerPic.png"
               class="picture sectionOneImg imgHeight"
             />
             <source
               media="(min-width:500px)"
-              srcset="tabletHeaderPic.png"
+              srcset="images/tabletHeaderPic.png"
               class="picture sectionOneImg imgHeight"
             />
 
             <source
               media="(min-width:200px)"
-              srcset="mobileSectionOneImg.png"
+              srcset="images/mobileSectionOneImg.png"
               class="picture sectionOneImg imgHeight"
             />
 
             <img
-              src="headerPic.png"
+              src="images/heade"
               alt="Product Image"
               class="sectionOneImg imgHeight picture"
             />
@@ -74,21 +74,21 @@
             <picture>
               <source
                 media="(min-width:900px)"
-                srcset="sectionTwo Left Img.png"
+                srcset="images/sectionTwo Left Img.png"
                 class="borderRadius imgHeight leftImg"
               />
               <source
                 media="(min-width:500px)"
-                srcset="tabletLeftImg.png"
+                srcset="images/tabletLeftImg.png"
                 class="borderRadius imgHeight leftImg"
               />
               <source
                 media="(min-width:200px)"
-                srcset="mobileLeftImg.png"
+                srcset="images/mobileLeftImg.png"
                 class="borderRadius imgHeight leftImg"
               />
               <img
-                src="headerPic.png"
+                src="images/headerPic.png"
                 alt="Product Image"
                 class="sectionOneImg imgHeight picture"
               />
@@ -99,16 +99,16 @@
             <picture>
               <source
                 media="(min-width:900px)"
-                srcset="sectionTwo Right Img.png"
+                srcset="images/sectionTwo Right Img.png"
                 class="borderRadius imgHeight centerImg leftImg"
               />
               <source
                 media="(min-width:500px)"
-                srcset="tabletCenterImg.png"
+                srcset="images/tabletCenterImg.png"
                 class="borderRadius imgHeight centerImg leftImg"
               />
               <img
-                src="sectionTwo Right Img.png"
+                src="images/sectionTwo Right Img.png"
                 alt="Keyboard Img"
                 class="centerImg imgHeight"
               />
@@ -130,7 +130,7 @@
       <section class="sectionThree featureSection flex">
         <div class="feature smallContainer">
           <div class="featureIcon iconWidth bgOrange borderRadius">
-            <img src="computerIcon.png" alt="" />
+            <img src="images/computerIcon.png" alt="" />
           </div>
           <h3 class="featureName blackFont">HIGHLY COMPATIBLE</h3>
           <p class="featureText">
@@ -142,7 +142,7 @@
 
         <div class="feature smallContainer">
           <div class="bluetoothIcon iconWidth bgOrange borderRadius">
-            <img src="bluetoothIcon.png" alt="" />
+            <img src="images/bluetoothIcon.png" alt="" />
           </div>
           <h3 class="featureName blackFont">WIRELESS WITH BLUETOOTH</h3>
           <p class="featureText">
@@ -154,7 +154,7 @@
 
         <div class="feature smallContainer">
           <div class="featureIcon iconWidth bgOrange borderRadius">
-            <img src="batteryIcon.png" alt="" />
+            <img src="images/batteryIcon.png" alt="" />
           </div>
           <h3 class="featureName blackFont">HIGH CAPACITY BATTERY</h3>
           <p class="featureText">
@@ -166,7 +166,7 @@
 
         <div class="feature smallContainer">
           <div class="lightIcon iconWidth bgOrange borderRadius">
-            <img src="LightIcon.png" alt="" />
+            <img src="images/LightIcon.png" alt="" />
           </div>
           <h3 class="featureName blackFont">RGB BACKLIT MODES</h3>
           <p class="featureText">
